[gd_scene load_steps=10 format=3 uid="uid://cd1uip8m6bqo4"]

[ext_resource type="Script" path="res://bullets/dynamite/dynamite.gd" id="1_cuny7"]
[ext_resource type="Texture2D" uid="uid://cyakypmjuvinw" path="res://bullets/dynamite/Dinamite.png" id="2_7hla4"]
[ext_resource type="Shader" path="res://enemies/Enemy_dmg.gdshader" id="2_wdnwd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qxsir"]
radius = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j655k"]
shader = ExtResource("2_wdnwd")
shader_parameter/hit_opacity = 0.0

[sub_resource type="Animation" id="Animation_lj3yt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/hit_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_4xkmq"]
resource_name = "boom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_swl22"]
resource_name = "wick"
length = 0.35
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lh63h"]
_data = {
"RESET": SubResource("Animation_lj3yt"),
"boom": SubResource("Animation_4xkmq"),
"wick": SubResource("Animation_swl22")
}

[node name="Area2D" type="Area2D"]
script = ExtResource("1_cuny7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qxsir")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_j655k")
position = Vector2(10, 0)
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_7hla4")
hframes = 3

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_lh63h")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
